Fixing footer out of place

--- a/equalizer-landing-page/styles.css
+++ b/equalizer-landing-page/styles.css
@@ -392,7 +392,8 @@ footer {
     height: 600px;
   }
   footer {
-    width: 1100px;
+    width: 100%;
+    padding: 0;
     display: grid;
     grid-template-columns: 288px 366px 1fr;
     grid-auto-rows: auto;
